Option escapeLinks added to avoid transliterating urls, mentions or hashtags
